[IC-X] Some corrections on about page

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -14,23 +14,23 @@
   "noteBlock": "In 2018 Integral Commodities SA became one of the largest exporters of Polymers (PP, PE), Fertilisers (Urea, Potash), Sulphur and Carbon Black originating from the Greater Caspian Region.",
   "keyMilestones": {
     "title": "Key milestones",
-    "2021": "Integral Commodities launched webshop for selling commodities online",
-    "2019": "We become strategic partners of Horasis, an independent, international think tank, headquartered in Zurich, Switzerland and dedicated to the innovation and development of sustainable emerging markets",
-    "2018": "We started exports of dry cargo from the Caspian region and Integral Group became one of the largest exporters and logistics providers for Urea 46%, Carbon black, Sulphur, Polypropylene (PP), Polyethylene (PE) products originating from the Caspian Region.",
-    "2017 1": "We became one of the organisers and the main sponsor of the Caspian Week, the platform for global ideas and the meeting point of global leaders, visionaries and experts with focus on Caspian region",
-    "2017 2": "We joined the St. Petersburg International Commodity Exchange. New project was opened in Mexico to help oilfield operators and importers of petroleum products enter the international market",
-    "2016": "We became members of the World Economic Forum.",
+    "2021": "Integral Group launched webshop for selling commodities online",
+    "2019": "Integral become strategic partners of Horasis, an independent, international think tank, headquartered in Zurich, Switzerland and dedicated to the innovation and development of sustainable emerging markets",
+    "2018": "Integral started exports of dry cargo from the Caspian region and Integral Group became one of the largest exporters and logistics providers for Urea 46%, Carbon black, Sulphur, Polypropylene (PP), Polyethylene (PE) products originating from the Caspian Region.",
+    "2017 1": "Integral became one of the organisers and the main sponsor of the Caspian Week, the platform for global ideas and the meeting point of global leaders, visionaries and experts with focus on Caspian region",
+    "2017 2": "Integral joined the St. Petersburg International Commodity Exchange. New project was opened in Mexico to help oilfield operators and importers of petroleum products enter the international market",
+    "2016": "Integral became member of the World Economic Forum.",
     "2015": "Integral Petroleum became one of the largest exporters and logistics providers for crude oil and petroleum products originating from Caspian Region.",
     "2008": "Integral Petroleum, first of the company of Integral Group, established in Geneva, Switzerland."
   },
   "futureReleases": {
     "title": "Future releases",
-    "tracking": "Tracking the shipment online in user account",
-    "find service": "Find servise providers for your order",
-    "online payment": "Online payment by credit card, bank transfer & bitcoin cash",
+    "tracking": "Tracking shipment online",
+    "find service": "Find service providers online",
+    "online payment": "Online payments",
     "re-ordering": "Re-ordering with few clicks",
-    "subscription": "Subscription to news about product launches, availability, price",
-    "find analog": "Find analog of your grade raw materials"
+    "subscription": "Subscription to news about products",
+    "find analog": "Find analog of grade for your raw materials"
   },
   "caspianWeek": {
     "title": "Organizer",
