--- a/locales/ru/about.json
+++ b/locales/ru/about.json
@@ -14,20 +14,20 @@
   "noteBlock": "В 2018 году Integral Commodities SA стал одним из крупнейших экспортеров карбамида 46%, технического углерода, серы, полипропилена (ПП), полиэтилена (ПЭ) из Каспийского региона.",
   "keyMilestones": {
     "title": "Ключевые этапы",
-    "2021": "Integral Commodities запустил интернет-магазин для реализации сырьевых продуктов в онлайне",
-    "2019": "Мы становимся стратегическим партнером Horasis - независимого международного аналитического центра со штаб-квартирой в Цюрихе, Швейцария.",
-    "2018": "Integral Commodities SA становится одним из крупнейших экспортеров карбамида 46%, технического углерода, серы, полипропилена (ПП), полиэтилена (ПЭ) из Каспийского региона.",
-    "2017 1": "Мы организовываем и становимся главным спонсором Caspian Week, платформы глобальных идей и места встречи мировых лидеров и экспертов рынка Каспийского региона.",
-    "2017 2": "Мы стали членами Петербургской международной товарно-сырьевой биржи. Приняли участие в открытии нового проекта  в Мексике, позволяющего операторам нефтяных месторождений и импортерам нефтепродуктов выйти на международный рынок.",
-    "2016": "Приняли участие в Международном Экономическом Форуме",
+    "2021": "Команда Integral Group запустила интернет-магазин для реализации сырьевых продуктов в онлайне",
+    "2019": "Integral становимся стратегическим партнером Horasis - независимого международного аналитического центра со штаб-квартирой в Цюрихе, Швейцария.",
+    "2018": "Integral становится одним из крупнейших экспортеров карбамида 46%, технического углерода, серы, полипропилена (ПП), полиэтилена (ПЭ) из Каспийского региона.",
+    "2017 1": "Integral организовывает Caspian Week и становитмя её главным спонсором, платформы глобальных идей и места встречи мировых лидеров и экспертов рынка Каспийского региона.",
+    "2017 2": "Integral стал членом Петербургской международной товарно-сырьевой биржи. Приняли участие в открытии нового проекта  в Мексике, позволяющего операторам нефтяных месторождений и импортерам нефтепродуктов выйти на международный рынок.",
+    "2016": "Integral принял участие в Международном Экономическом Форуме",
     "2015": "Integral Petroleum стал одним из крупнейших экспортеров сырой нефти и нефтепродуктов из Каспийского региона.",
     "2008": "Integral Petroleum, первая компания Integral Group, основанная в Женеве, Швейцария."
   },
   "futureReleases": {
     "title": "В ближайшем будущем",
-    "tracking": "Отслеживание грузов онлайн в личном кабинете пользователя",
+    "tracking": "Отслеживание грузов онлайн",
     "find service": "Поиск представителей услуг для вашего заказа",
-    "online payment": "Онлайн-оплата кредитной картой, банковским переводом и криптовалютой",
+    "online payment": "Оплата онлайн",
     "re-ordering": "Повторный заказ в несколько кликов",
     "subscription": "Подписки на интересующие вас товары и услуги",
     "find analog": "Поиск аналогов интересующего сырья"
