[IC-X] Some corrections on about page (2)

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -11,7 +11,7 @@
     "title": "How?",
     "text": "Making it possible to find full information, negotiate, complete and track orders online"
   },
-  "noteBlock": "In 2018 Integral Commodities SA became one of the largest exporters of Polymers (PP, PE), Fertilisers (Urea, Potash), Sulphur and Carbon Black originating from the Greater Caspian Region.",
+  "noteBlock": "In 2018 Integral became one of the largest exporters of Polymers (PP, PE), Fertilisers (Urea, Potash), Sulphur and Carbon Black originating from the Greater Caspian Region.",
   "keyMilestones": {
     "title": "Key milestones",
     "2021": "Integral Group launched webshop for selling commodities online",
