--- a/locales/ru/about.json
+++ b/locales/ru/about.json
@@ -11,7 +11,7 @@
     "title": "Как?",
     "text": "Получайте информацию, ведите переговоры, выполняйте и отслеживайте заказы онлайн"
   },
-  "noteBlock": "В 2018 году Integral Commodities SA стал одним из крупнейших экспортеров карбамида 46%, технического углерода, серы, полипропилена (ПП), полиэтилена (ПЭ) из Каспийского региона.",
+  "noteBlock": "В 2018 году Integral стал одним из крупнейших экспортеров карбамида 46%, технического углерода, серы, полипропилена (ПП), полиэтилена (ПЭ) из Каспийского региона.",
   "keyMilestones": {
     "title": "Ключевые этапы",
     "2021": "Команда Integral Group запустила интернет-магазин для реализации сырьевых продуктов в онлайне",
