[IC-X] Minor fixes

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -66,7 +66,7 @@
     "index of polymeric granules turning yellow": "Index of polymeric granules turning yellow",
     "uniformity of granules": "Uniformity of granules",
     "thermooxidizing stability at 150°c": "Thermooxidizing stability at 150°C",
-    "hardness (shore d)": "hardness (shore D)",
+    "hardness (shore d)": "Hardness (shore D)",
     "mass fraction of sulfur, %": "Mass fraction of sulfur (%)",
     "presence of mechanical impurities": "Presence of mechanical impurities",
     "mass fraction of ash, %": "Mass fraction of ash (%)",
