--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -16,6 +16,7 @@
     "vst": "Температура вика",
     "color": "Цвет",
     "price from": "Цена от:",
+    "аналоги": "Аналоги",
     "static strenght": "Статическая сила",
     "mass fraction of nitrogen": "Массовая доля азота, минимум (%)",
     "mass fraction of biuret": "Массовая доля биурета, максимум (%)",
