[IC-X] Mobile version fixes

--- a/locales/ru/product.json
+++ b/locales/ru/product.json
@@ -2,7 +2,7 @@
   "tabs": {
     "prices": "Цены",
     "offer": "Запрос",
-    "product": "Информация о продукте",
+    "product": "Информация",
     "analogs": "Аналоги",
     "availability": "Доступность",
     "documents": "Документы",
